# Projects

./: .gitmodules  README.md
Projets academiques/IOGS - 3D molecule renderer/: CMakeLists.txt  README.md  README.txt
Projets academiques/IOGS - 3D molecule renderer/data/shaders/: cylinder.frag  simple.frag  simple.vert  sphere.frag  sphere.vert
Projets academiques/IOGS - 3D molecule renderer/ext/SOIL/: CMakeLists.txt
Projets academiques/IOGS - 3D molecule renderer/ext/glbinding/: ._CMakeLists.txt  ._cmake  ._source  CMakeLists.txt
Projets academiques/IOGS - 3D molecule renderer/src/: atom.cpp  atom.h  main.cpp  sphere.cpp  sphere2.cpp  sphere2.h  viewer.cpp  viewer.h
Projets personnels/RPG/: CMakeConfig.h.in  CMakeLists.txt  JeuOne.cbp  JeuOne.depend  JeuOne.layout  README.md  main.cpp  nouvelle.txt  sauvegarde.txt  sauvegarde0.txt  sauvegarde1.txt  sauvegarde2.txt  sauvegarde3.txt  txt2dat.cpp
Projets personnels/RPG/Editeur/Editeur/: Editeur.pro  FenPrincipale.cpp  FenPrincipale.h  MaFenetre.cpp  MaFenetre.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_alteration.cpp  mainwindow_capacite.cpp  mainwindow_carte.cpp  mainwindow_effet.cpp  mainwindow_evenement.cpp  mainwindow_groupemonstres.cpp  mainwindow_heros.cpp  mainwindow_magasin.cpp  mainwindow_monstre.cpp  mainwindow_objet.cpp  mainwindow_tileset.cpp  statistique.cpp  statistique.h
Projets personnels/RPG/Editeur/build-Editeur-Desktop_Qt_5_2_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_dialog.h
Projets personnels/RPG/bdd/: alterations.txt  cartes.txt  fonctions.cpp  graphismes.txt  heros.txt  objets.txt  objets2.txt  tilesets.txt
Projets personnels/RPG/bdd_model/: capacites.txt  effets.txt  evenements.txt  fonctions.cpp  groupesmonstres.txt  heros2.txt  magasins.txt  monstres.txt  objets.txt
Projets personnels/RPG/graphics/: page_heros.tim  page_heros.txt  page_monstres.tim  page_monstres.txt  page_police.tim  page_police.txt  page_sprites.tim  page_sprites.txt  page_tuiles.tim  page_tuiles.txt
Projets personnels/RPG/include/: ALTERATIONS.h  ALTERATIONS_D.h  Alteration.h  BlocAnime.h  BlocGraphique.h  BoiteTexte.h  CAPACITES.h  CAPACITES_D.h  CARTES.h  CARTES_D.h  Capacite.h  Carte.h  Combat.h  EFFETS.h  EFFETS_D.h  EVENEMENTS.h  EVENEMENTS_D.h  Ecran_titre.h  Effet.h  ElementGraphique.h  Equipable.h  Equipe.h  Evenement.h  GRAPHISMES.h  GROUPESMONSTRES.h  GROUPESMONSTRES_D.h  Game_Over.h  GroupeCapacites.h  GroupeMonstres.h  GroupeObjets.h  HEROSS.h  HEROSS_D.h  Heros.h  Input.h  Inventaire.h  MAGASINS.h  MAGASINS_D.h  MONSTRES.h  MONSTRES_D.h  Magasin.h  (+31 more)
Projets personnels/RPG/include/affichage/: Combat.h  Ecran_titre.h  Game_Over.h  Menu.h  Menu_Competences.h  Menu_Configuration.h  Menu_Equipement.h  Menu_Etat.h  Menu_Magasin.h  Menu_Nom.h  Menu_Objets.h  Menu_Sauver.h  Terrain.h
Projets personnels/RPG/include/bdd/: ALTERATIONS.h  ALTERATIONS_D.h  CAPACITES.h  CAPACITES_D.h  CARTES.h  CARTES_D.h  EFFETS.h  EFFETS_D.h  EVENEMENTS.h  EVENEMENTS_D.h  GRAPHISMES.h  GROUPESMONSTRES.h  GROUPESMONSTRES_D.h  HEROSS.h  HEROSS_D.h  MAGASINS.h  MAGASINS_D.h  MONSTRES.h  MONSTRES_D.h  OBJETS.h  OBJETS_D.h  POLICE.h  SCRIPTS.h  SCRIPTS_D.h  TILESETS.h  TILESETS_D.h
Projets personnels/RPG/include/bdd-ascii/: ALTERATIONS.h  ALTERATIONS_D.h  CAPACITES.h  CAPACITES_D.h  CARTES.h  CARTES_D.h  EFFETS.h  EFFETS_D.h  EVENEMENTS.h  EVENEMENTS_D.h  GROUPESMONSTRES.h  GROUPESMONSTRES_D.h  HEROSS.h  HEROSS_D.h  MAGASINS.h  MAGASINS_D.h  MONSTRES.h  MONSTRES_D.h  OBJETS.h  OBJETS_D.h  SCRIPTS.h  SCRIPTS_D.h  TILESETS.h  TILESETS_D.h
Projets personnels/RPG/include/bdd2/: ALTERATIONS.h  CAPACITES.h  CARTES.h  EFFETS.h  EVENEMENTS.h  GRAPHISMES.h  GROUPESMONSTRES.h  HEROSS.h  MAGASINS.h  MONSTRES.h  OBJETS.h  TILESETS.h
Projets personnels/RPG/include/lib/: Alteration.h  Capacite.h  Carte.h  Effet.h  Elements.h  Equipable.h  Equipe.h  Evenement.h  GroupeMonstres.h  GroupeObjets.h  Heros.h  Inventaire.h  Magasin.h  Monstre.h  Objet.h  Partie.h  Personnage.h  Script.h  Tileset.h  Utilisable.h
Projets personnels/RPG/include/scenes/: Combat.h  Ecran_titre.h  Game_Over.h  Menu.h  Menu_Competences.h  Menu_Configuration.h  Menu_Equipement.h  Menu_Etat.h  Menu_Magasin.h  Menu_Nom.h  Menu_Objets.h  Menu_Sauver.h  Terrain.h
Projets personnels/RPG/iso/: iso.xml  system.cnf
Projets personnels/RPG/music/: New Composition.mid
Projets personnels/RPG/src/: Alteration.cpp  BlocAnime.cpp  BlocGraphique.cpp  BoiteTexte.cpp  Capacite.cpp  Carte.cpp  Combat.cpp  Ecran_titre.cpp  Effet.cpp  ElementGraphique.cpp  Equipable.cpp  Equipe.cpp  Evenement.cpp  Game_Over.cpp  GroupeCapacites.cpp  GroupeMonstres.cpp  GroupeObjets.cpp  Heros.cpp  Input.cpp  Inventaire.cpp  Magasin.cpp  Menu.cpp  Menu_Competences.cpp  Menu_Configuration.cpp  Menu_Equipement.cpp  Menu_Etat.cpp  Menu_Magasin.cpp  Menu_Objets.cpp  Menu_Sauver.cpp  Monstre.cpp  Objet.cpp  Partie.cpp  Personnage.cpp  Script.cpp  Terrain.cpp  Tileset.cpp  Utilisable.cpp  controles.cpp  conversions.cpp  fonctions_graphiques.cpp  (+2 more)
Projets personnels/RPG/src/affichage/: Combat.cpp  Ecran_titre.cpp  Game_Over.cpp  Menu.cpp  Menu_Competences.cpp  Menu_Configuration.cpp  Menu_Equipement.cpp  Menu_Etat.cpp  Menu_Magasin.cpp  Menu_Nom.cpp  Menu_Objets.cpp  Menu_Sauver.cpp  Terrain.cpp
Projets personnels/RPG/src/cstdio/: Input.cpp  fichierES.cpp  moteur_graphique.cpp
Projets personnels/RPG/src/lib/: Alteration.cpp  Capacite.cpp  Carte.cpp  Effet.cpp  Elements.cpp  Equipable.cpp  Equipe.cpp  Evenement.cpp  GroupeMonstres.cpp  GroupeObjets.cpp  Heros.cpp  Inventaire.cpp  Magasin.cpp  Monstre.cpp  Objet.cpp  Partie.cpp  Personnage.cpp  Script.cpp  Tileset.cpp  Utilisable.cpp
Projets personnels/RPG/src/psx/: Input.cpp  fichierES.cpp  moteur_graphique.cpp
Projets personnels/RPG/src/scenes/: Combat.cpp  Ecran_titre.cpp  Game_Over.cpp  Menu.cpp  Menu_Competences.cpp  Menu_Configuration.cpp  Menu_Equipement.cpp  Menu_Etat.cpp  Menu_Magasin.cpp  Menu_Nom.cpp  Menu_Objets.cpp  Menu_Sauver.cpp  Terrain.cpp
Projets personnels/RPG/src/sdl/: Input.cpp  (+1 more)
(+739 files in other folders)
