project(projet²)

cmake_minimum_required(VERSION 3.2.0)

add_subdirectory(ext/glfw)
add_subdirectory(ext/glbinding)
add_subdirectory(ext/SOIL)

include_directories(ext/glfw/include)
include_directories(ext/glbinding/include)
include_directories(ext/eigen3)
include_directories(ext/SOIL/src)

if(APPLE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
endif()

set(SRC_FILES 
    src/main.cpp
    src/viewer.cpp
    src/viewer.h
    src/shader.cpp
    src/shader.h
    src/opengl.h
    src/shape.h
    src/sphere.h
    src/sphere2.h
    src/sphere.cpp
    src/sphere2.cpp
    src/camera.h
    src/camera.cpp
    src/trackball.cpp
    src/trackball.h
    src/atom.cpp
    src/atom.h
)

add_definitions(-DDATA_DIR="${PROJECT_SOURCE_DIR}/data")

add_executable(projet ${SRC_FILES})

target_link_libraries(projet glfw ${GLFW_LIBRARIES} glbinding SOIL)
